--- a/index.html
+++ b/index.html
@@ -159,8 +159,19 @@
     <section id="projects">
         <div class="container">
             <h2 class="section-title">Portfolio</h2>
-            <div class="blog-content fade-in-section">
-                <p>Coming soon...</p>
+            <div class="projects-grid fade-in-section">
+                <a href="https://itch.io/jam/pitts-games-4-social-impact-2025/rate/3954266" target="_blank" class="project-card-link">
+                    <div class="project-card">
+                        <div class="project-img-container">
+                            <img src="protfolio-paperworkx.png" alt="Paperworkx Game" class="project-img">
+                        </div>
+                        <div class="project-info">
+                            <h3 class="project-title">Paperworkx</h3>
+                            <p class="project-description">A game developed for Pitt's Games 4 Social Impact 2025</p>
+                            <p class="project-date">Oct, 2025</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
