--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                         <div class="social-links" style="justify-content: center; margin-top: 1.5rem;">
                             <a href="mailto:XIY249@pitt.edu" title="Email"><i class="fas fa-envelope"></i></a>
                             <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                            <a href="https://github.com/ParkNotpark" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                            <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/Xiaoyue-Yu" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/xiaoyue-yu-9aa009385/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                     <div class="home-right">
