--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="social-links" style="justify-content: center; margin-top: 1.5rem;">
                             <a href="mailto:XIY249@pitt.edu" title="Email"><i class="fas fa-envelope"></i></a>
-                            <a href="#" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                            <a href="https://scholar.google.com/citations?hl=en&user=vhUDTcAAAAAJ" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
                             <a href="https://github.com/Xiaoyue-Yu" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
                             <a href="https://www.linkedin.com/in/xiaoyue-yu-9aa009385/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         </div>
@@ -61,8 +61,8 @@
                         <p class="research-area">My research area is ...</p>
                         <div class="bubbles-container">
                             <div class="bubble">HCI</div>
+                            <div class="bubble">Serious Games</div>
                             <div class="bubble">Human Factor</div>
-                            <div class="bubble">Automated Vehicles</div>
                             <div class="bubble">Human-centered Design</div>
                         </div>
                     </div>
