added one project: playable archive

--- a/index.html
+++ b/index.html
@@ -156,10 +156,24 @@
         </div>
     </section>
 
-    <section id="projects">
+<section id="projects">
         <div class="container">
             <h2 class="section-title">Portfolio</h2>
             <div class="projects-grid fade-in-section">
+
+                <a href="https://www.playablearchive.com/" target="_blank" class="project-card-link">
+                    <div class="project-card">
+                        <div class="project-img-container">
+                            <img src="portfolio-playable-archive.png" alt="The Playable Archive" class="project-img">
+                        </div>
+                        <div class="project-info">
+                            <h3 class="project-title">The Playable Archive</h3>
+                            <p class="project-description">A research initiative transforming legacy educational games into collaborative virtual worlds (Research Assistant).</p>
+                            <p class="project-date">Fall 2025 - Present</p>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="https://itch.io/jam/pitts-games-4-social-impact-2025/rate/3954266" target="_blank" class="project-card-link">
                     <div class="project-card">
                         <div class="project-img-container">
@@ -167,11 +181,12 @@
                         </div>
                         <div class="project-info">
                             <h3 class="project-title">Paperworkx</h3>
-                            <p class="project-description">A game developed for Pitt's Games 4 Social Impact 2025</p>
+                            <p class="project-description">1st Place Narrative Design winner at Pitt's Games 4 Social Impact 2025.</p>
                             <p class="project-date">Oct, 2025</p>
                         </div>
                     </div>
                 </a>
+
             </div>
         </div>
     </section>
