Added PI lab experience

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="timeline-item">
                             <div class="timeline-content-with-image edu2-layout">
                                 <div class="timeline-text">
-                                    <p class="timeline-date">Fall 2025 (Upcoming)</p>
+                                    <p class="timeline-date">Fall 2025 - Present</p>
                                     <h3 class="timeline-title">Undergraduate Student, University of Pittsburgh</h3>
                                     <p class="timeline-description">Majoring in Information Science</p>
                                 </div>
@@ -118,7 +118,7 @@
                         <div class="timeline-item">
                             <div class="timeline-content-with-image edu1-layout">
                                 <div class="timeline-text">
-                                    <p class="timeline-date">Fall 2023 - Present</p>
+                                    <p class="timeline-date">Fall 2023 - Spring 2025</p>
                                     <h3 class="timeline-title">Undergraduate Student, Sichuan University</h3>
                                     <p class="timeline-description">Majoring in Industrial Engineering</p>
                                 </div>
@@ -128,30 +128,42 @@
                     </div>
                 </div>
                 
-                <div class="experience-section">
-                    <h3 class="subsection-title">Laboratories</h3>
-                    <div class="timeline fade-in-section">
-                        <div class="timeline-item">
-                            <div class="timeline-content">
-                                <p class="timeline-date">August 2025 - Present</p>
-                                <h3 class="timeline-title">Learning Technologies Lab (LTL)</h3>
-                                <p class="timeline-description"><i class="fas fa-map-marker-alt"></i> University of Pittsburgh, School of Computing and Information</p>
-                                <p class="timeline-description"><i class="fas fa-user-tie"></i> Dr. Dmitriy Babichenko, Department of Informatics and Networked Systems</p>
-                            </div>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-content-with-image">
-                                <div class="timeline-text">
-                                    <p class="timeline-date">December 2024 - Present</p>
-                                    <h3 class="timeline-title">Human-centered AI Lab (HAIL)</h3>
-                                    <p class="timeline-description"><i class="fas fa-map-marker-alt"></i> Sichuan University-Pittsburgh Institute, South Campus N420</p>
-                                    <p class="timeline-description"><i class="fas fa-user-tie"></i> Dr. Xiaomei Tan, Department of Industrial Engineering</p>
-                                </div>
-                                <img src="photo_exp_lab1.JPG" alt="HAIL Lab" class="timeline-image">
-                            </div>
-                        </div>
-                    </div>
+<div class="experience-section">
+    <h3 class="subsection-title">Laboratories</h3>
+    <div class="timeline fade-in-section">
+
+        <div class="timeline-item">
+            <div class="timeline-content">
+                <p class="timeline-date">December 2025 - Present</p>
+                <h3 class="timeline-title">Pervasive HCI Lab (PI Lab)</h3>
+                <p class="timeline-description"><i class="fas fa-map-marker-alt"></i> Tsinghua University, Beijing, China (Remote)</p>
+                <p class="timeline-description"><i class="fas fa-university"></i> Department of Computer Science and Technology</p>
+            </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-content">
+                <p class="timeline-date">August 2025 - Present</p>
+                <h3 class="timeline-title">Learning Technologies Lab (LTL)</h3>
+                <p class="timeline-description"><i class="fas fa-map-marker-alt"></i> University of Pittsburgh, School of Computing and Information</p>
+                <p class="timeline-description"><i class="fas fa-user-tie"></i> Dr. Dmitriy Babichenko, Department of Informatics and Networked Systems</p>
+            </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-content-with-image">
+                <div class="timeline-text">
+                    <p class="timeline-date">December 2024 - Present</p>
+                    <h3 class="timeline-title">Human-centered AI Lab (HAIL)</h3>
+                    <p class="timeline-description"><i class="fas fa-map-marker-alt"></i> Sichuan University-Pittsburgh Institute, South Campus N420</p>
+                    <p class="timeline-description"><i class="fas fa-user-tie"></i> Dr. Xiaomei Tan, Department of Industrial Engineering</p>
                 </div>
+                <img src="photo_exp_lab1.JPG" alt="HAIL Lab" class="timeline-image">
+            </div>
+        </div>
+
+    </div>
+</div>
             </div>
         </div>
     </section>
