modified:   index.html 	new file:   portfolio-anxiety-time-machine.png 	modified:   scripts.js 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                         <h1 class="name">Xiaoyue Yu</h1>
                         <p class="research-area">My research area is ...</p>
                         <div class="bubbles-container">
-                            <div class="bubble">HCI</div>
                             <div class="bubble">Serious Games</div>
                             <div class="bubble">Human Factor</div>
                             <div class="bubble">Human-centered Design</div>
+                            <div class="bubble">Human-AI Interaction</div>
                         </div>
                     </div>
                 </div>
@@ -197,6 +197,23 @@
                 <h2 class="section-title">Portfolio</h2>
                 <div class="projects-grid fade-in-section">
 
+                    <a href="https://devpost.com/software/the-anxiety-time-machine?ref_content=my-projects-tab&ref_feature=my_projects"
+                        target="_blank" class="project-card-link">
+                        <div class="project-card">
+                            <div class="project-img-container">
+                                <img src="portfolio-anxiety-time-machine.png" alt="The Anxiety Time Machine"
+                                    class="project-img">
+                            </div>
+                            <div class="project-info">
+                                <h3 class="project-title">The Anxiety Time Machine</h3>
+                                <p class="project-description">A web-based emotional sharing platform that helps users
+                                    express and process their feelings while discovering they're not alone. 2nd Place
+                                    winner at Pitt's She Innovates 2026.</p>
+                                <p class="project-date">Feb 2026</p>
+                            </div>
+                        </div>
+                    </a>
+
                     <a href="https://www.playablearchive.com/" target="_blank" class="project-card-link">
                         <div class="project-card">
                             <div class="project-img-container">
@@ -278,10 +295,9 @@
                 <div class="contact-content-overlay">
                     <h2 class="section-title contact-title">Contact</h2>
                     <div class="contact-content fade-in-section">
-                        <p class="contact-text">
-                            Feel free to reach out for collaborations or just to chat. I'm always open to discussing new
-                            projects, creative ideas, or opportunities to be part of your vision.
-                        </p>
+                        <!-- <p class="contact-text">
+
+                        </p> -->
                         <p class="contact-email">XIY249@pitt.edu</p>
                         <p class="contact-email">yuxiaoyue@stu.scu.edu.cn</p>
                     </div>
@@ -295,7 +311,7 @@
 
     <div
         style="position: fixed; bottom: 10px; width: 100%; text-align: center; font-size: 12px; color: #fff; text-shadow: 1px 1px 2px rgba(0,0,0,0.7); z-index: 1001;">
-        &copy; 2025 Xiaoyue Yu. All Rights Reserved.</div>
+        &copy; 2026 Xiaoyue Yu. All Rights Reserved.</div>
 
     <script src="scripts.js"></script>
 </body>
